# Energy-Consumption-Analytics

./: .editorconfig  .env.airflow  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_DOCS.md  Dockerfile.airflow  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  alembic.ini  docker-compose.airflow.yml  docker-compose.prod.yml  docker-compose.yml  init_db.py  pyproject.toml  requirements-airflow.txt  requirements.txt  run_etl.py  setup.py
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  release.yml  tests.yml
airflow/dags/energy_etl/: __init__.py
alembic/: env.py
alembic/versions/: 9936b6161a97_initial_database_schema.py  c41d1ce08c30_initial_database_schema_with_users_and_.py  d3e888989659_change_is_holiday_to_boolean_type.py
dags/: energy_etl_dag.py
dags/energy_etl/: energy_pipeline.py
data/raw/: sample_energy_data.csv
migrations/: env.py
src/: main.py
src/api/routes/: auth.py  energy.py  ml.py  powerbi.py
src/auth/: auth_utils.py
src/config/: database.py  logging.py  settings.py
src/etl/: __init__.py  base.py  config.py  utils.py
src/etl/extractors/: __init__.py  base.py  csv_extractor.py  kaggle_extractor.py  smart_meter_extractor.py
src/etl/jobs/: energy_consumption_etl.py  energy_etl.py
src/etl/loaders/: __init__.py  database.py  db_loader.py
src/etl/transformers/: __init__.py  energy_transformer.py
src/ml/: anomaly_detection.py  energy_anomaly_detector.py  forecasting.py  service.py  utils.py
src/models/: energy_models.py
src/monitoring/: health.py  metrics.py  middleware.py
src/powerbi/: client.py  service.py
tests/: conftest.py  test_etl_pipeline.py  test_ml.py
tests/api/: test_api.py
tests/etl/: test_etl.py
tests/ml/: test_ml.py
